tests/invalid/SetDefine_Invalid_2.whiley
import * from whiley.lang.*

constant THIRTYTWO is 32

constant TWELVE is 12

constant numbers is {THIRTYTWO, TWELV}
